Adding the events createMessage and newMessage

--- a/public/index.html
+++ b/public/index.html
@@ -11,17 +11,7 @@
     <p>Welcome to chat app</p>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script>
-    var socket= io('http://localhost:3000');
-
-    socket.on('connect', ()=>{
-        console.log('Beta pahuch gaya');
-    })
-
-    socket.on('disconnect',()=>{
-        console.log('Beta wps gaya')
-    })
-    </script>
+    <script src="js/index.js">    </script>
     
 </body>
 </html>
