Adding a simple ui using jquery

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,18 @@
     <title>Node Chat APp</title>
 </head>
 <body>
+    <ol id="messagesList">
 
+    </ol>
+
+    <form id="message-form">
+        <input type="text" name="message" placeholder="Type your message here"/>
+        <button>Send It off</button>
+    </form>
     <p>Welcome to chat app</p>
 
     <script src="/socket.io/socket.io.js"></script>
+    <script src="js/libs/jquery-3.3.1.min.js"></script>
     <script src="js/index.js">    </script>
     
 </body>
