--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
         <input type="text" name="message" placeholder="Type your message here"/>
         <button>Send It off</button>
     </form>
+
+    <button id="send-location">Send Location</button>
     <p>Welcome to chat app</p>
 
     <script src="/socket.io/socket.io.js"></script>
