--- a/public/index.html
+++ b/public/index.html
@@ -4,20 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link  rel="stylesheet" href="/css/styles.css">
     <title>Node Chat APp</title>
 </head>
-<body>
-    <ol id="messagesList">
+<body class="chat">
 
-    </ol>
+    <div class="chat__sidebar">
+        <h3>People</h3>
+        <div></div>
+    </div>
 
-    <form id="message-form">
-        <input type="text" name="message" placeholder="Type your message here"/>
-        <button>Send It off</button>
-    </form>
+    <div class="chat__main">
+            <ol id="messagesList" class="chat__messages">
 
-    <button id="send-location">Send Location</button>
-    <p>Welcome to chat app</p>
+            </ol>
+
+            <div class="chat__footer">
+                    <form id="message-form">
+                            <input type="text" name="message" placeholder="Type your message here" autofocus autocomplete="false"/>
+                            <button>Send It off</button>
+                        </form>
+                    
+                        <button id="send-location">Send Location</button>
+
+            </div>
+
+    </div>
+
+    
+
+  
+   
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/libs/jquery-3.3.1.min.js"></script>
